crates/pardosa-schema/tests/compile_fail/not_event_safe.stderr
error[E0277]: `NotBlessed` is not `EventSafe`
 --> tests/compile_fail/not_event_safe.rs:5:24
  |
5 |     require_event_safe(NotBlessed);
  |     ------------------ ^^^^^^^^^^ needs `#[derive(GenomeSafe)]` or a bounded wrapper
  |     |
  |     required by a bound introduced by this call
  |
help: the trait `EventSafe` is not implemented for `NotBlessed`
 --> tests/compile_fail/not_event_safe.rs:2:1
  |
2 | struct NotBlessed;
  | ^^^^^^^^^^^^^^^^^
  = note: Only types blessed by `#[derive(GenomeSafe)]` or workspace-internal impls may implement `EventSafe`. See GEN-0036 and Solon doctrine (ADOPTION.md, 16 Rules).
  = note: Common substitutions: `String` → `EventString<MAX>` / `NonEmptyEventString<MAX>`; `Vec<T>` → `EventVec<T, MAX>`; `Vec<u8>` → `EventBytes<MAX>` (all from `pardosa_schema::bounded`).
  = note: Timestamps: use `pardosa_wire::Timestamp` (nonzero-u64 nanos since UNIX epoch).
  = note: Map- and set-shaped payloads (`HashMap`/`BTreeMap`/`HashSet`/`BTreeSet`) are forbidden by Solon doctrine (map- and set-shaped payloads are non-canonical): enumerate keys as named struct fields or an enum, or store the map outside the event store.
  = help: the following other types implement trait `EventSafe`:
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
            (T0, T1, T2, T3, T4, T5)
            (T0, T1, T2, T3, T4, T5, T6)
            (T0, T1, T2, T3, T4, T5, T6, T7)
            (T0, T1, T2, T3, T4, T5, T6, T7, T8)
          and $N others
note: required by a bound in `require_event_safe`
 --> tests/compile_fail/not_event_safe.rs:3:26
  |
3 | fn require_event_safe<T: EventSafe>(_: T) {}
  |                          ^^^^^^^^^ required by this bound in `require_event_safe`
